syntax = "proto3";

package proto;

option go_package = "./proto";

enum TaskStatus {
  QUEUED = 0;
  INPROGRESS = 1;
  COMPLETED = 2;
  FAILED = 3;
}

message TaskRequest {
  string task_id = 1;
  string data = 2;
}

message TaskResponse {
  string task_id = 1;
  string message = 2;
  bool success = 3;

}

service WorkerService {
  rpc SubmitTask (TaskRequest) returns (TaskResponse) {};
}

service CoordinatorService {
  rpc SendHeartbeat (HeartbeatRequest) returns (HeartBeatResponse) {};
  rpc UpdateTaskStatus (UpdateStatusRequest) returns (UpdateStatusResponse) {};
}

message UpdateStatusRequest {
  string task_id = 1;
  TaskStatus status = 2;
}

message UpdateStatusResponse {
  bool success = 1;
}

message HeartbeatRequest {
  string workerId = 1;
  string address = 2;
}

message HeartBeatResponse {
  bool acknowledged = 1;
}
